# slambook2

ch3/examples/: CMakeLists.txt  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt
ch3/useGeometry/: CMakeLists.txt
ch3/visualizeGeometry/: visualizeGeometry.cpp
